objects/Contract.object
<CustomObject>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting VP Signature</fullName>
                </value>
                <value>
                    <fullName>Awaiting President Signature</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>B2B_Widget</fullName>
        <active>true</active>
        <label>B2B Widget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Call_Center_Business</fullName>
        <active>true</active>
        <label>Call Center Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_Contract</fullName>
        <active>true</active>
        <label>Employment Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hiring_Manager</fullName>
        <active>true</active>
        <label>Hiring Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Management</fullName>
        <active>true</active>
        <label>Property Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiter</fullName>
        <active>true</active>
        <label>Recruiter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>